# firehose_remote_write

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  firehose.json  foo.json  justfile  test.sh
k8s/: deployment.yaml  ingress.yaml  kustomization.yaml  ns.yaml  service.yaml
src/: consts.rs  main.rs  prometheus.rs  structs.rs
src/aws/: mod.rs
tools/: entrypoint.sh  target_arch.sh
