[package]
name = "firehose_remote_write"
version = "0.1.3"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "macros","tokio"] }
tracing = {version = "0.1.40"}
tracing-subscriber = {version = "0.3.17", features = ["fmt","env-filter"]}
tracing-log = "0.2.0"
serde = {version = "1.0.154", features=["derive"]}
serde_json = "1.0.94"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features=["macros","rt-multi-thread"] }
lazy_static = "1.4.0"
anyhow = "1.0.86"
url = "2.5.0"
reqwest = { version = "0.12.4", default_features = false, features = ["rustls-tls"] }
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
prometheus = { git = "https://github.com/PeterGrace/rust-prometheus" }
prometheus_remote_write = "0.2.1"
base64 = "0.22.1"